--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mocha": "^4.0.1",
     "request": "^2.83.0"
   }
 }
