--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ install:
   - npm install
 
 script:
-  - npm test
+  - npm run coverage
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   email: false
