--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "coverage": "nyc mocha --exit"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
+    "nyc": "^11.3.0",
     "request": "^2.83.0"
   }
 }
