--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha --exit",
-    "coverage": "nyc mocha --exit"
+    "coverage": "nyc report --reporter=text-lcov",
+    "coverage-codecov": "nyc report --reporter=text-lcov && codecov"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +15,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "codecov": "^3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
