--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ install:
   - npm install
 
 script:
-  - npm run coverage-codecov
+  - npm run coverage
+
+after_success:
+  - npm run codecov
 
 notifications:
   email: false
