Try fix coverage upload

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "mocha --exit",
     "coverage": "nyc mocha --exit",
-    "codecov": "nyc report --reporter=text-lcov && codecov"
+    "codecov": "nyc report --reporter=text-lcov | codecov"
   },
   "author": "",
   "license": "MIT",
