--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha --exit",
-    "coverage": "nyc mocha --exit",
-    "codecov": "nyc report --reporter=text-lcov | codecov"
+    "coverage": "nyc --reporter=html --reporter=text mocha --exit",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "codecov": "^3.0.0",
+    "coveralls": "^3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
